add_library(Chimeric core/World.cpp core/World.h core/ResourceManager.h core/ComponentManager.cpp core/ComponentManager.h core/store/HashedArrayTree.h core/Storage.h core/store/VecStore.h core/util/dynamic_bitset.cpp core/util/dynamic_bitset.h core/Family.cpp core/Family.h core/util/flat_set.h core/EntityManager.cpp core/EntityManager.h)